--- a/AspWebProjet/appsettings.json
+++ b/AspWebProjet/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\sqlexpress;Database=ProjetDotNetDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AspWebProjet;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=ProjetDotNetDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
